# dota2-coach

./: .env.example  .gitignore  PRD_v2.md  README.md  _check_cache.py  _debug_lane.py  _debug_lane2.py  _debug_lane3.py  _inspect_db.py  _introspect_boot.py  _stratz_introspect.py  _verify_lane.py  prompt.md  pyproject.toml  response.txt  upload.py  v3.md
.beads/: metadata.json
.claude/: settings.json
docs/superpowers/plans/: 2026-04-01-recent-game-history-enhancements.md  2026-04-02-local-benchmark-accumulation.md  2026-04-02-z1l-implementation.md
docs/superpowers/specs/: 2026-03-22-replay-caching-design.md  2026-04-01-llm-lane-context-design.md  2026-04-01-recent-game-history-enhancements-design.md  2026-04-02-local-benchmark-accumulation-design.md
docs/superpowers/specs/PRDs/: PRD_v2.md  PRD_v3.md
dota_coach/: api.py  cache.py  cli.py  coach.py  config.py  detector.py  downloader.py  enricher.py  extractor.py  history.py  importer.py  models.py  opendota.py  parser.py  prompt.py  role.py  stratz.py
dota_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fixtures/: mock_match.json  spike_notes.md
static/: index.html  style.css
tests/: test_chat.py  test_death_classifier.py  test_detector.py  test_enricher.py  test_extractor.py  test_frontend_contract.py  test_history.py  test_importer.py  test_item_paths.py  test_opendota.py  test_prompt.py  test_recent_matches_api.py  test_role.py  test_stratz.py
